@@ -481,8 +481,10 @@ browser_search (GimpBrowser           *browser,
 
   if (! query_text || strlen (query_text) == 0)
     {
-      /* translate with the appropriate plural form for a *lot* of procedures */
-      str = g_strdup_printf (_("%d procedures"), num_procs);
+      str = g_strdup_printf (dngettext (GETTEXT_PACKAGE "-libgimp",
+                                        "%d procedure",
+                                        "%d procedures",
+                                        num_procs), num_procs);
     }
   else
     {
